# rust-tui-tutorial

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
src/: action.rs  app.rs  db.rs  event.rs  main.rs  models.rs  tui.rs  update.rs  view.rs
src/components/: code_block.rs  glitch_text.rs  hint_popup.rs  mod.rs  navigation.rs  progress_bar.rs
src/content/: loader.rs  mod.rs  phase01_basics.toml  phase02_ownership.toml  phase03_types.toml  phase04_collections.toml  phase05_abstractions.toml  phase06_advanced.toml
src/screens/: exercise.rs  lesson.rs  lesson_menu.rs  mod.rs  summary.rs  welcome.rs
src/validator/: compiler.rs  mod.rs  pattern.rs
