[package]
name = "rust-tui-tutorial"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
tempfile = "3"
rusqlite = { version = "0.32", features = ["bundled"] }
futures = "0.3"
tokio-util = "0.7"
dirs = "6"
regex = "1"
tui-textarea = "0.7"
